[gd_scene load_steps=12 format=2]

[ext_resource path="res://game_fonts/lmroman25.tres" type="DynamicFont" id=1]
[ext_resource path="res://textures/barHorizontal_darkgrey.png" type="Texture" id=2]
[ext_resource path="res://incantation/Incantation_Operations.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/charselect/charselect.gd" type="Script" id=4]
[ext_resource path="res://LMROMAN10-REGULAR.OTF" type="DynamicFontData" id=5]
[ext_resource path="res://textures/operations/spritesheet.png" type="Texture" id=6]
[ext_resource path="res://textures/barHorizontal_green.png" type="Texture" id=7]
[ext_resource path="res://incantation/Incantation_Operations_Circle.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[node name="CharSelect" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1076.0
color = Color( 0.380392, 0.937255, 0.329412, 0.152941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window" type="MarginContainer" parent="."]
margin_left = 62.0
margin_top = 41.0
margin_right = 1864.0
margin_bottom = 1039.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox1" type="HBoxContainer" parent="window"]
margin_right = 1802.0
margin_bottom = 998.0
custom_constants/separation = 154

[node name="characters" type="VBoxContainer" parent="window/hbox1"]
margin_right = 400.0
margin_bottom = 998.0
custom_constants/separation = 29

[node name="Label" type="Label" parent="window/hbox1/characters"]
margin_right = 400.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "Choisissez votre personnage"
align = 1

[node name="charlist" type="ItemList" parent="window/hbox1/characters"]
margin_top = 72.0
margin_right = 400.0
margin_bottom = 272.0
grow_horizontal = 0
rect_min_size = Vector2( 400, 200 )
max_text_lines = 3
max_columns = 3
same_column_width = true

[node name="Label2" type="Label" parent="window/hbox1/characters"]
margin_top = 301.0
margin_right = 400.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 1 )
text = "Cycle d'incantation"
align = 1

[node name="Incantation_Operations_Circle" parent="window/hbox1/characters" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 373.0
margin_right = 400.0
margin_bottom = 682.0

[node name="settings" type="VBoxContainer" parent="window/hbox1"]
margin_left = 554.0
margin_right = 1454.0
margin_bottom = 998.0
rect_min_size = Vector2( 900, 300 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="window/hbox1/settings"]
margin_right = 900.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 1 )
text = "Paramètres de jeu"
align = 1

[node name="char_name" type="VBoxContainer" parent="window/hbox1/settings"]
margin_top = 12.0
margin_right = 900.0
margin_bottom = 81.0

[node name="hbox" type="HBoxContainer" parent="window/hbox1/settings/char_name"]
margin_right = 900.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="window/hbox1/settings/char_name/hbox"]
visible = false
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="window/hbox1/settings/char_name/hbox"]
visible = false
margin_left = 4.0
margin_right = 8.0
margin_bottom = 29.0

[node name="name_label" type="Label" parent="window/hbox1/settings/char_name/hbox"]
margin_right = 15.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "/"

[node name="descr" type="Label" parent="window/hbox1/settings/char_name"]
margin_top = 47.0
margin_right = 900.0
margin_bottom = 61.0
autowrap = true

[node name="HSeparator" type="HSeparator" parent="window/hbox1/settings/char_name"]
margin_top = 65.0
margin_right = 900.0
margin_bottom = 69.0

[node name="caracteristics" type="VBoxContainer" parent="window/hbox1/settings"]
margin_top = 91.0
margin_right = 900.0
margin_bottom = 252.0

[node name="VBoxContainer" type="VBoxContainer" parent="window/hbox1/settings/caracteristics"]
margin_right = 900.0
margin_bottom = 153.0

[node name="HBoxContainer2" type="HBoxContainer" parent="window/hbox1/settings/caracteristics/VBoxContainer"]
margin_right = 900.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer2"]
margin_right = 212.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "Caractéristiques"

[node name="VSeparator" type="VSeparator" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer2"]
margin_left = 216.0
margin_right = 220.0
margin_bottom = 43.0

[node name="HBoxContainer" type="HBoxContainer" parent="window/hbox1/settings/caracteristics/VBoxContainer"]
margin_top = 47.0
margin_right = 900.0
margin_bottom = 153.0

[node name="carac_names" type="VBoxContainer" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 106.0
custom_constants/separation = 24
alignment = 1

[node name="label_diff" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names"]
margin_top = 8.0
margin_right = 84.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 14 )
text = "Difficulté"

[node name="label_hp" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names"]
margin_top = 46.0
margin_right = 84.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 14 )
text = "Points de Vie"

[node name="label_impact_spell" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names"]
visible = false
margin_top = 76.0
margin_right = 84.0
margin_bottom = 90.0
text = "Sort d'impact"

[node name="label_malus" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names"]
margin_top = 84.0
margin_right = 84.0
margin_bottom = 98.0
text = "Malus"

[node name="label_power" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names"]
visible = false
margin_top = 76.0
margin_right = 133.0
margin_bottom = 90.0
text = "Puissance"

[node name="label_delay" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names"]
visible = false
margin_top = 76.0
margin_right = 133.0
margin_bottom = 90.0
text = "Délai d'impact"

[node name="label_toughness" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names"]
visible = false
margin_top = 76.0
margin_right = 133.0
margin_bottom = 90.0
text = "Résistance"

[node name="label_speed" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names"]
visible = false
margin_top = 76.0
margin_right = 133.0
margin_bottom = 90.0
text = "Vitesse d'incantation"

[node name="label_cost" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names"]
visible = false
margin_top = 76.0
margin_right = 84.0
margin_bottom = 90.0
text = "Coût"

[node name="VSeparator" type="VSeparator" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 92.0
margin_bottom = 106.0

[node name="carac_names2" type="VBoxContainer" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 191.0
margin_bottom = 106.0
custom_constants/separation = 24
alignment = 1

[node name="diff_value" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names2"]
margin_top = 8.0
margin_right = 95.0
margin_bottom = 22.0
text = "<diff>"
align = 1
valign = 1

[node name="hp_value" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names2"]
margin_top = 46.0
margin_right = 95.0
margin_bottom = 60.0
text = "<hp>"
align = 1
valign = 1

[node name="spell_name" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names2"]
visible = false
margin_top = 76.0
margin_right = 97.0
margin_bottom = 90.0
text = "<impact_spell>"
align = 1

[node name="malus_value" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names2"]
margin_top = 84.0
margin_right = 95.0
margin_bottom = 98.0
text = "<malus_value>"
align = 1

[node name="power_value" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names2"]
visible = false
margin_top = 76.0
margin_right = 133.0
margin_bottom = 90.0
text = "Puissance"
align = 1

[node name="impact_delay" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names2"]
visible = false
margin_top = 76.0
margin_right = 133.0
margin_bottom = 90.0
text = "Délai d'impact"
align = 1

[node name="toughness_value" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names2"]
visible = false
margin_top = 76.0
margin_right = 133.0
margin_bottom = 90.0
text = "Résistance"
align = 1

[node name="casting_speed" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names2"]
visible = false
margin_top = 76.0
margin_right = 133.0
margin_bottom = 90.0
text = "Vitesse d'incantation"
align = 1

[node name="cost_value" type="Label" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names2"]
visible = false
margin_top = 76.0
margin_right = 84.0
margin_bottom = 90.0
text = "Coût"
align = 1

[node name="VSeparator3" type="VSeparator" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 199.0
margin_bottom = 106.0

[node name="carac_names3" type="VBoxContainer" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 403.0
margin_bottom = 106.0
custom_constants/separation = 14
alignment = 1

[node name="bar_diff" type="TextureProgress" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names3"]
margin_right = 200.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 20 )
max_value = 5.0
texture_under = ExtResource( 2 )

[node name="hp_value" type="TextureProgress" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names3"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 14 )
min_value = 10.0
max_value = 50.0
value = 10.0
rounded = true
texture_under = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names3"]
visible = false
margin_top = 80.0
margin_right = 200.0
margin_bottom = 94.0
rect_min_size = Vector2( 200, 14 )
color = Color( 0.231373, 0.231373, 0.231373, 0.117647 )

[node name="malus_value" type="TextureProgress" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names3"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 14 )
max_value = 4.0
value = 4.0
rounded = true
texture_under = ExtResource( 2 )

[node name="power_value" type="TextureProgress" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names3"]
visible = false
margin_top = 68.0
margin_right = 200.0
margin_bottom = 94.0
rect_min_size = Vector2( 100, 14 )
max_value = 25.0
value = 1.0
rounded = true
texture_under = ExtResource( 2 )

[node name="impact_delay" type="TextureProgress" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names3"]
visible = false
margin_top = 68.0
margin_right = 200.0
margin_bottom = 94.0
rect_min_size = Vector2( 100, 14 )
max_value = 30.0
step = -1.0
value = 1.0
texture_under = ExtResource( 2 )

[node name="toughness_value" type="TextureProgress" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names3"]
visible = false
margin_top = 68.0
margin_right = 200.0
margin_bottom = 94.0
rect_min_size = Vector2( 100, 14 )
min_value = 1.0
max_value = 40.0
value = 1.0
rounded = true
texture_under = ExtResource( 2 )

[node name="casting_speed" type="TextureProgress" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names3"]
visible = false
margin_top = 68.0
margin_right = 200.0
margin_bottom = 94.0
rect_min_size = Vector2( 100, 14 )
min_value = 0.1
max_value = 5.0
value = 0.1
rounded = true
texture_under = ExtResource( 2 )

[node name="cost_value" type="TextureProgress" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer/carac_names3"]
visible = false
margin_top = 68.0
margin_right = 200.0
margin_bottom = 94.0
rect_min_size = Vector2( 100, 14 )
min_value = 1.0
max_value = 40.0
value = 1.0
rounded = true
texture_under = ExtResource( 2 )

[node name="VSeparator2" type="VSeparator" parent="window/hbox1/settings/caracteristics/VBoxContainer/HBoxContainer"]
margin_left = 407.0
margin_right = 411.0
margin_bottom = 106.0

[node name="HSeparator" type="HSeparator" parent="window/hbox1/settings/caracteristics"]
margin_top = 157.0
margin_right = 900.0
margin_bottom = 161.0

[node name="informations" type="VBoxContainer" parent="window/hbox1/settings"]
margin_top = 262.0
margin_right = 900.0
margin_bottom = 533.0

[node name="label" type="Label" parent="window/hbox1/settings/informations"]
margin_right = 900.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "Description du style"

[node name="text_info" type="Label" parent="window/hbox1/settings/informations"]
margin_top = 47.0
margin_right = 900.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "<informations>"

[node name="header" type="HBoxContainer" parent="window/hbox1/settings/informations"]
margin_top = 53.0
margin_right = 900.0
margin_bottom = 67.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="window/hbox1/settings/informations/header"]
margin_right = 64.0
margin_bottom = 14.0
text = "Opération"

[node name="VSeparator" type="VSeparator" parent="window/hbox1/settings/informations/header"]
margin_left = 94.0
margin_right = 98.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="window/hbox1/settings/informations/header"]
margin_left = 128.0
margin_right = 276.0
margin_bottom = 14.0
text = "Probabilité d'apparition"

[node name="GridContainer" type="ScrollContainer" parent="window/hbox1/settings/informations"]
margin_top = 71.0
margin_right = 900.0
margin_bottom = 271.0
rect_min_size = Vector2( 900, 200 )
scroll_horizontal_enabled = false

[node name="list" type="VBoxContainer" parent="window/hbox1/settings/informations/GridContainer"]
margin_right = 328.0
margin_bottom = 64.0

[node name="base" type="HBoxContainer" parent="window/hbox1/settings/informations/GridContainer/list"]
margin_right = 328.0
margin_bottom = 64.0
custom_constants/separation = 30
alignment = 1

[node name="op" type="TextureRect" parent="window/hbox1/settings/informations/GridContainer/list/base"]
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 3 )

[node name="VSeparator" type="VSeparator" parent="window/hbox1/settings/informations/GridContainer/list/base"]
margin_left = 94.0
margin_right = 98.0
margin_bottom = 64.0

[node name="centering" type="CenterContainer" parent="window/hbox1/settings/informations/GridContainer/list/base"]
margin_left = 128.0
margin_right = 328.0
margin_bottom = 64.0

[node name="probability_bar" type="TextureProgress" parent="window/hbox1/settings/informations/GridContainer/list/base/centering"]
margin_top = 19.0
margin_right = 200.0
margin_bottom = 45.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 7 )

[node name="HSeparator2" type="HSeparator" parent="window/hbox1/settings"]
margin_top = 543.0
margin_right = 900.0
margin_bottom = 547.0

[node name="incantation" type="VBoxContainer" parent="window/hbox1/settings"]
visible = false
margin_top = 505.0
margin_right = 900.0
margin_bottom = 635.0

[node name="Label" type="Label" parent="window/hbox1/settings/incantation"]
margin_right = 900.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = "Cycle d'incantation"

[node name="Incantation_Operations" parent="window/hbox1/settings/incantation" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 900.0
margin_bottom = 130.0

[node name="diff" type="VBoxContainer" parent="window/hbox1/settings"]
margin_top = 557.0
margin_right = 900.0
margin_bottom = 667.0

[node name="Label" type="Label" parent="window/hbox1/settings/diff"]
margin_right = 900.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "Difficulté"

[node name="HSlider" type="HSlider" parent="window/hbox1/settings/diff"]
margin_top = 47.0
margin_right = 900.0
margin_bottom = 63.0
max_value = 5.0

[node name="diff_label" type="Label" parent="window/hbox1/settings/diff"]
margin_top = 67.0
margin_right = 900.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 1 )
text = "Très facile"
align = 1

[node name="HSeparator3" type="HSeparator" parent="window/hbox1/settings"]
margin_top = 677.0
margin_right = 900.0
margin_bottom = 681.0

[node name="HBoxContainer" type="HBoxContainer" parent="window/hbox1/settings"]
margin_top = 691.0
margin_right = 900.0
margin_bottom = 716.0
alignment = 1

[node name="startbutton" type="Button" parent="window/hbox1/settings/HBoxContainer"]
margin_left = 348.0
margin_right = 448.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
text = "Démarrer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return_button" type="Button" parent="window/hbox1/settings/HBoxContainer"]
margin_left = 452.0
margin_right = 552.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="window/hbox1/characters/charlist" to="." method="_on_ItemList_item_selected"]
[connection signal="value_changed" from="window/hbox1/settings/diff/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="button_down" from="window/hbox1/settings/HBoxContainer/startbutton" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="window/hbox1/settings/HBoxContainer/return_button" to="." method="_on_return_button_down"]
